<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="PxUsage"
    android:background="@drawable/im_main_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="850px"
        android:layout_height="400px"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_main_titlebox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0px"-->
        <!--            android:layout_weight="5"-->
        <!--            android:orientation="horizontal">-->

        <ImageView
            android:id="@+id/main_shopping_cart"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginStart="75px"
            android:layout_marginTop="45px"
            android:contentDescription="@string/login_titlebox_image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_shopping_main_cart" />

        <TextView
            android:id="@+id/main_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/main_titlebox_text_1"
            android:textColor="@color/mainTitleboxText"
            android:textSize="100px"
            app:layout_constraintBottom_toBottomOf="@+id/main_shopping_cart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/main_shopping_cart"
            app:layout_constraintTop_toTopOf="@+id/main_shopping_cart" />

        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

        <!--        <androidx.constraintlayout.widget.ConstraintLayout-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="0px"-->
        <!--            android:layout_weight="3"-->
        <!--            android:orientation="horizontal">-->

        <TextView
            android:id="@+id/main_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="55px"
            android:fontFamily="sans-serif-black"
            android:text="@string/main_titlebox_text_2"
            android:textColor="@color/mainTitleboxText"
            android:textSize="65px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="850px"
        android:layout_height="0px"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/style_main_titlebox"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_title"
                android:textColor="@color/black"
                android:textSize="80px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100px"
                android:layout_marginTop="40px"
                android:layout_marginEnd="100px"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_account_text"
                android:textColor="@color/black"
                android:textSize="60px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <EditText
                android:id="@+id/login_account"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_marginLeft="100px"
                android:layout_marginTop="20px"
                android:layout_marginRight="100px"
                android:background="@drawable/style_edittext"
                android:hint="@string/login_account_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account" />

            <TextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100px"
                android:layout_marginTop="20px"
                android:layout_marginEnd="100px"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_password_text"
                android:textColor="@color/black"
                android:textSize="60px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_account" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="100px"
                android:layout_marginStart="100px"
                android:layout_marginTop="20px"
                android:layout_marginEnd="100px"
                android:background="@drawable/style_edittext"
                android:hint="@string/login_password_hint"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingLeft="30px"
                android:paddingRight="30px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />

            <Button
                android:id="@+id/login"
                android:layout_width="400px"
                android:layout_height="130px"
                android:layout_marginTop="40px"
                android:background="@drawable/style_login_button"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_button_text"
                android:textColor="@color/black"
                android:textSize="60px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_password" />

            <Button
                android:id="@+id/google_login"
                android:layout_width="150px"
                android:layout_height="150px"
                android:layout_marginTop="50px"
                android:background="@drawable/ic_google_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login" />

            <TextView
                android:id="@+id/anonymous_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50px"
                android:fontFamily="sans-serif-black"
                android:text="@string/login_anonymous"
                android:textColor="@color/loginAnonymousText"
                android:textSize="40px"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/google_login" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/dis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>